<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fondo"
    tools:context="com.cl.fenix.portalfolio.PortafolioMainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/tamano_titulo"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/titulo"
        android:layout_margin="20dp"
        android:id="@+id/titulo"
        />


    <Button style="@style/botonPortafolio"
        android:text="@string/primeraOpcion"
        android:id="@+id/primeraOpcion"
        android:layout_below="@+id/titulo"
        android:layout_width="235dp"
        android:onClick="toastMessage"
        />


    <Button
        style="@style/botonPortafolio"
        android:layout_below="@id/primeraOpcion"
        android:onClick="toastMessage"
        android:text="@string/segundaOpcion"
        android:id="@+id/segundaOpcion"  />

    <Button
       style="@style/botonPortafolio"

        android:layout_below="@id/segundaOpcion"
        android:onClick="toastMessage"
        android:text="@string/terceraOpcion"
        android:id="@+id/terceraOpcion"
        />


    <Button
        style="@style/botonPortafolio"
        android:layout_below="@id/terceraOpcion"
        android:text="@string/cuartaOpcion"
        android:id="@+id/cuartaOpcion"
        android:onClick="toastMessage"
        />

    <Button
        style="@style/botonPortafolio"

        android:layout_below="@id/cuartaOpcion"
        android:onClick="toastMessage"
        android:text="@string/quintaOpcion"
        android:id="@+id/quintaOpcion"
        />
    <Button
        style="@style/botonPortafolio"
        android:layout_below="@id/quintaOpcion"
        android:text="@string/sextaOpcion"
        android:onClick="toastMessage"
        android:id="@+id/sextaOpcion"
        />


</RelativeLayout>


</ScrollView>